--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@react-navigation/bottom-tabs": "^7.10.1",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.10.1",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "expo": "~54.0.32",
+    "expo-asset": "~12.0.12",
     "expo-camera": "~17.0.10",
+    "expo-gl": "~16.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
     "expo-image-manipulator": "~14.0.8",
@@ -33,6 +37,7 @@
     "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
+    "three": "^0.182.0",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
